--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ discord.py>=2.3.2
 Pillow>=10.0.0
 imageio>=2.31.1
 numpy>=1.24.3
+cinemagoer>=2023.5.1
+fuzzywuzzy[speedup]>=0.18.0
+python-Levenshtein>=0.21.0
