--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@
 discord.py>=2.3.2
 
 # Movie Search Dependencies
-cinemagoer>=2023.5.1
 fuzzywuzzy[speedup]>=0.18.0
-python-Levenshtein>=0.21.0
+python-Levenshtein>=0.21.1
+aiohttp>=3.9.0
 
 # Image Processing (for wheel spinning)
 Pillow>=10.0.0
